--- a/index.html
+++ b/index.html
@@ -138,10 +138,10 @@
         }
 
         .resume-section h3 {
-            color: #667eea;
+            color: #e91e63;
             margin-bottom: 15px;
             font-size: 1.3rem;
-            border-left: 4px solid #667eea;
+            border-left: 4px solid #e91e63;
             padding-left: 15px;
         }
 
@@ -150,7 +150,7 @@
             padding: 20px;
             background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
             border-radius: 10px;
-            border-left: 4px solid #667eea;
+            border-left: 4px solid #e91e63;
         }
 
         .resume-item h4 {
@@ -159,7 +159,7 @@
         }
 
         .resume-item .company {
-            color: #667eea;
+            color: #e91e63;
             font-weight: 600;
             margin-bottom: 5px;
         }
@@ -197,7 +197,7 @@
             background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
             border-radius: 15px;
             padding: 25px;
-            border-left: 5px solid #667eea;
+            border-left: 5px solid #e91e63;
             transition: transform 0.3s ease;
         }
 
@@ -207,7 +207,7 @@
         }
 
         .project-card h4 {
-            color: #667eea;
+            color: #e91e63;
             margin-bottom: 10px;
         }
 
@@ -219,7 +219,7 @@
         }
 
         .tech-tag {
-            background: #667eea;
+            background: #e91e63;
             color: white;
             padding: 5px 12px;
             border-radius: 15px;
